<resources>
    <string name="app_name">Let\'s Park</string>
    <string name="action_settings">Settings</string>
    <string name="stop_alarm">알람 끄기</string>
    <string name="start_alarm">알람 설정</string>
    <string name="edit_text_hint">원하는 시간을 입력해주세요!</string>
    <string name="hours">시</string>
    <string name="minutes">분</string>
    <string name="seconds">초</string>
    <string name="label"> :</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">내 차 위치 확인</string>
    <string name="slide_1_desc">내 차를 지정함과 동시에 시작 시간과 요금을 알 수 있습니다!</string>

    <string name="slide_2_title">주차장 현황 확인</string>
    <string name="slide_2_desc">차를 빠르게 주차할 수 있도록 다른 사용자가 주차한 구역을 볼 수 있습니다!</string>

    <string name="slide_3_title">알림 기능</string>
    <string name="slide_3_desc">원하는 시간에 알람을 맞춰서 주차를 원활하게 합니다!</string>

    <string name="slide_4_title">공지 사항</string>
    <string name="slide_4_desc">웹을 통해 주차장에 대한 공지 사항을 볼 수 있습니다!</string>

</resources>
