<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

    <RadioGroup
        android:id="@+id/time_type_selection_radio_group"
        android:layout_width="316dp"
        android:layout_height="171dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:buttonTint="@color/green"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/seconds_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/green"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/seconds"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/minutes_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/green"
            android:gravity="center_vertical"
            android:text="@string/minutes"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/hours_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/green"
            android:gravity="center_vertical"
            android:text="@string/hours"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/input_interval_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/time_type_selection_radio_group"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/green"
        android:hint="@string/edit_text_hint"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="@android:color/darker_gray"
        android:textCursorDrawable="@null"
        android:textSize="20sp" />

    <Button
        android:id="@+id/start_alarm_button"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="207dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/bebasneue"
        android:text="@string/start_alarm"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/stop_alarm_button"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="207dp"
        android:layout_marginEnd="18dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/bebasneue"
        android:text="@string/stop_alarm"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>